  - Fixed defect #433 Local fanart not handled correctly for Unknown TV series
  - Enhancement  #435 User customizeable perspective angle
  - Fixed defect #436 If the mjb.homePage property is unspecified, a valid home page will be chosen
  - Enhancement  #437 Improvements to multi-episode file support.
  - Enhancement  #442 Added proxy support
  - Enhancement  #444 New plugin to retrieve movie data from Russian movie database www.kinopoisk.ru
  - Fixed defect #449 Trailers are not excluded from the Year categories
  - Fixed defect #450 Percentage (%) in movie details causes error
  - Fixed defect #451 Allocine Plugin didn't work anymore
  - Fixed defeсt #454 Use full float value for FPS
  - Fixed defect #468 Accentuated character with allocine plugin no more correctly dispalyed with version beta 700
  - Fixed defect #476 XBMC NFO movie xml encoding is ignored
  - Fixed defect #479 XML <releaseDate> not correct with allocine Plugin
  - Fixed defect #480 AppleTrailerPlugin uses a charset not universally supported
  - Fixed defect #483 The rating is the same as top250 when using nfo file
  - Fixed defect #484 WebBrowser charset detection error
  - Fixed defect #485 Update for Kinopoisk plugin that allows you to specify IMDB movie URL in .nfo
  - Enhancement  #492 Updates for Sratim plugin and the Hebrew skin
  - Enhancement  #496 Allocine Trailer Plugin : Fill the <originalTitle> tag
  - Enhancement  #497 Bug fix and update for FilmDeltaSEPlugin
  - Fixed defect #501 Filmweb plugin doesn't work correctly after last YAMJ changes
  - Enhancement  #509 Updates for Filmweb plugin
                        1) originalTitle support
                        2) fanart support
                        3) Top250 support
                        4) outline support
                        5) rating precision
                        6) not to overwrite XBMC NFO data
  - Fixed defect #511 Sending cookies to subdomains