@@ -14,27 +14,30 @@
 <!--             default of 16777216 (16MB)                                            -->
 
 <libraries>
-  <library>
-      <path>/media/HD1/Movies/</path>
-      <nmtpath>file:///opt/sybhttpd/localhost.drives/USB_DRIVE_A-1/Movies/</nmtpath>
-      <exclude name="sample,tmp/,temp/,RECYCLE.BIN/"/>
-      <description></description>
-      <prebuf></prebuf>
-  </library>
+    <library>
+        <path>/media/HD1/Movies/</path>
+        <nmtpath>file:///opt/sybhttpd/localhost.drives/USB_DRIVE_A-1/Movies/</nmtpath>
+        <exclude name="sample,tmp/,temp/,RECYCLE.BIN/"/>
+        <description></description>
+        <prebuf></prebuf>
+        <scrapeLibrary>true</scrapeLibrary>
+    </library>
 
-  <library>
-      <path>/media/HD1/TV/</path>
-      <nmtpath>file:///opt/sybhttpd/localhost.drives/USB_DRIVE_A-1/TV/</nmtpath>
-      <exclude name="sample,tmp/,temp/,RECYCLE.BIN/"/>
-      <description></description>
-      <prebuf></prebuf>
-  </library>
+    <library>
+        <path>/media/HD1/TV/</path>
+        <nmtpath>file:///opt/sybhttpd/localhost.drives/USB_DRIVE_A-1/TV/</nmtpath>
+        <exclude name="sample,tmp/,temp/,RECYCLE.BIN/"/>
+        <description></description>
+        <prebuf></prebuf>
+        <scrapeLibrary>true</scrapeLibrary>
+    </library>
 
-  <library>
-      <path>/media/HD1/Misc/</path>
-      <nmtpath>file:///opt/sybhttpd/localhost.drives/USB_DRIVE_A-1/Misc/</nmtpath>
-      <exclude name="sample,tmp/,temp/,RECYCLE.BIN/"/>
-      <description></description>
-      <prebuf></prebuf>
-  </library>
+    <library>
+        <path>/media/HD1/Misc/</path>
+        <nmtpath>file:///opt/sybhttpd/localhost.drives/USB_DRIVE_A-1/Misc/</nmtpath>
+        <exclude name="sample,tmp/,temp/,RECYCLE.BIN/"/>
+        <description></description>
+        <prebuf></prebuf>
+        <scrapeLibrary>true</scrapeLibrary>
+    </library>
 </libraries>
